syntax = "proto3";

enum ProtoKind {
  TypeDouble = 0;
  TypeFloat = 1;
  TypeInt64 = 2;
  TypeUint64 = 3;
  TypeInt32 = 4;
  TypeFixed64 = 5;
  TypeFixed32 = 6;
  TypeBool = 7;
  TypeString = 8;
  TypeBytes = 9;
  TypeUint32 = 10;
  TypeSfixed32 = 11;
  TypeSfixed64 = 12;
  TypeSint32 = 13;
  TypeSint64 = 14;
}

enum Category {
  Prefab = 0;
  Save = 1;
}

message BasicField {
  ProtoKind kind = 1;
}

message AliasField {
  string original_type_name = 1;
  ProtoKind alias_kind = 2;
}

message ListField {
  ProtoKind alias_kind = 1;
  string original_type_name = 2;
  string iterator = 3;
  string emplacer = 4;
}

message Field {
  string name = 1;
  repeated Category categories = 2;
  oneof value {
    BasicField basic_field = 3;
    AliasField alias_field = 4;
    ListField list_field = 5;
  }
}

message ProtoFileInfo {
  string full_class_name = 1;
  repeated Field fields = 2;
  repeated string ancestors = 3;
}